--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Minimalist photography portfolio. © <span id="y"></span></p>
+    <h1>Perdi A Linha</h1>
+    <p>Bordados e outras artes</p>
   </header>
 
   <main class="grid" id="gallery" aria-live="polite">
