--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     -->
 
     <figure class="card">
-      <a href="photos/sample-01.webp" data-full="photos/sample-01.webp" data-index="0">
-        <img class="thumb" src="thumbs/sample-01.webp" alt="Forest tower at sunrise" loading="lazy" width="800" height="600">
+      <a href="photos/sample-01.webp" data-full="photos/coracao.jpeg" data-index="0">
+        <img class="thumb" src="thumbs/coracao.webp" alt="Forest tower at sunrise" loading="lazy" width="800" height="600">
       </a>
     </figure>
 
