--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     -->
 
     <figure class="card">
-      <a href="photos/sample-01.webp" data-full="photos/coracao.jpg" data-index="0">
+      <a href="photos/coracao.jpg" data-full="photos/coracao.jpg" data-index="0">
         <img class="thumb" src="thumbs/coracao.webp" alt="Forest tower at sunrise" loading="lazy" width="800" height="600">
       </a>
     </figure>
