--- a/index.html
+++ b/index.html
@@ -78,16 +78,12 @@
     </figure>
 
     <figure class="card">
-      <a href="photos/sample-02.webp" data-full="photos/sample-02.webp" data-index="1">
-        <img class="thumb" src="thumbs/sample-02.webp" alt="Distant smoke over hills" loading="lazy" width="800" height="600">
+      <a href="photos/coracaodemulher.jpg" data-full="photos/coracaodemulher.jpg" data-index="1">
+        <img class="thumb" src="thumbs/coracaodemulher.webp" alt="Distant smoke over hills" loading="lazy" width="800" height="600">
       </a>
     </figure>
 
-    <figure class="card">
-      <a href="photos/sample-03.webp" data-full="photos/sample-03.webp" data-index="2">
-        <img class="thumb" src="thumbs/sample-03.webp" alt="Camera mast and blue sky" loading="lazy" width="800" height="600">
-      </a>
-    </figure>
+
 
     <!-- Add more <figure> ... </figure> blocks as needed -->
   </main>
