--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <header>
     <h1>Perdi A Linha</h1>
-    <p>Bordados e outras artes</p>
+    <p>Bordados e outras artes da Clo</p>
   </header>
 
   <main class="grid" id="gallery" aria-live="polite">
