--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   <title>Your Name — Photo Portfolio</title>
   <meta name="description" content="Photography portfolio by Your Name">
   <style>
-    :root {
-      --bg:#0f0f10; --fg:#eaeaea; --muted:#a3a3a3; --grid-gap:14px; --maxw:1200px;
-    }
+    
+ :root {
+  --bg:#ffffff;
+  --fg:#000000;
+  --muted:#555555;
+  --grid-gap:14px;
+  --maxw:1200px;
+}
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body {
